turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:24: error: reassignment to val
	if (i=colors.length-2){
             ^